fixed the gallery display on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -333,15 +333,19 @@ img{
   }
 
  .gallery{
-        grid-template-columns: repeat(2, 1fr);
                 margin-bottom: 0;
                    transition: 1s;
                      grid-gap: 0.2rem;
-                      padding: 0.2rem;      
-                      display: grid;       
+                      padding: 0.2rem;            
                        height: 100%;
                         width: 100%;                               
   }
+
+  .section-c .gallery { 
+    grid-template-columns: repeat(1, 1fr);
+                  display: grid; 
+                    
+ }
 
   .gallery img:hover{
       transform: scale(1.1);
